--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           path: reports
 
   report:
-    if: always
+    if: always()
     needs: [test]
     runs-on: ubuntu-latest
     steps:
